--- a/index.html
+++ b/index.html
@@ -3,25 +3,23 @@
 
 <head>
 	<meta charset='UTF-8'>
-	
 	<title>No More Tables generator</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src='js/jquery-2.1.4.min.js'></script>
+	<script src='js/jquery-2.1.4.min.js'></script>
 	<script src='js/jquery-ui-1.11.4/jquery-ui.min.js'></script>
-	<script src='js/FileSaver.min.js'></script>
+	<script src='js/FileSaver.js'></script>
 	<link rel="stylesheet" href="css/siteStyles.css">
-    <link rel='stylesheet' href='js/jquery-ui-1.11.4/jquery-ui.min.css'>	
+	<link rel='stylesheet' href='js/jquery-ui-1.11.4/jquery-ui.min.css'>	
 	<link rel="stylesheet" href="css/tableStyles.css">
 	<link rel="stylesheet" href="css/sbsStyles/styles.css">
 </head>
 
 <body>
-	<!--Feel free to do anything with this that isn't illegal, unless your laws restrict freedom, in which case just do what you want.-->
 	<div id="option-content">
 		<div> <!--I put this div here for consistency, since the two sections below have the same structure-->
 			<h1>Responsive table generator - No More Tables</h1>
 			<p>Tables that have too many columns can look squished, or go off the screen, on small devices. This table generator makes tables collapse on small screens.</p>
-			<h2># Input csv or table data (from Excel or online)</h2>
+			<h2># Input table-separated or table data (from Excel or online)</h2>
 			<p>Optional (but recommended): </p>
 			<textarea id="giveTableHeading" rows="1" placeholder="Give your table a heading"></textarea>
 			<p>Required: </p>
